<resources>
    <string name="app_name">NoteMe</string>
    <string name="new_note_activity_title">New Note</string>
    <string name="add_new_note_button">Add New Note</string>
    <string name="save_button">Save</string>
    <string name="delete_note_button">Delete Note</string>
    <string name="title_input_hint">Title</string>
    <string name="subtitle_input_hint">Subtitle</string>
    <string name="description_input_hint">Note</string>
    <string name="no_title_hint">No title</string>
    <string name="no_subtitle_hint">No subtitle</string>
    <string name="no_note_hint">No note</string>
    <string name="no_notes_message">No Notes</string>
    <string name="edit_note_activity_title">Edit Note</string>
</resources>