<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/note_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/note_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/no_title_hint"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/delete_button"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/note_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/no_subtitle_hint"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:layout_below="@+id/note_title" />

    <TextView
        android:id="@+id/note_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/no_note_hint"
        android:textSize="18sp"
        android:layout_below="@+id/note_subtitle" />

    <ImageView
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/delete_note_button"
        app:srcCompat="@drawable/ic_delete" />

</RelativeLayout>